[gd_scene load_steps=44 format=3 uid="uid://d0rwm145i372m"]

[ext_resource type="Texture2D" uid="uid://bclh2octy1b0h" path="res://sprites/wolfweapons.png" id="1_bgwm6"]
[ext_resource type="Script" path="res://scripts/ui.gd" id="1_fisiw"]
[ext_resource type="Texture2D" uid="uid://bkectmqdhxo5h" path="res://sprites/hudmachinegun.png" id="3_6431s"]
[ext_resource type="Texture2D" uid="uid://ctmicd3st0dyn" path="res://sprites/bjface.png" id="4_8nvxm"]
[ext_resource type="LabelSettings" uid="uid://di6jhd2men5dc" path="res://labels/label.tres" id="4_twnr3"]
[ext_resource type="Texture2D" uid="uid://c0vpn5tf81fro" path="res://sprites/hardcoded.png" id="6_w8pq3"]

[sub_resource type="AtlasTexture" id="AtlasTexture_mjivk"]
atlas = ExtResource("1_bgwm6")
region = Rect2(64, 32, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nv2f0"]
atlas = ExtResource("1_bgwm6")
region = Rect2(128, 32, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t0l2v"]
atlas = ExtResource("1_bgwm6")
region = Rect2(192, 32, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bleg1"]
atlas = ExtResource("1_bgwm6")
region = Rect2(0, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s14ao"]
atlas = ExtResource("1_bgwm6")
region = Rect2(64, 64, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ogjj7"]
atlas = ExtResource("1_bgwm6")
region = Rect2(128, 64, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gu8od"]
atlas = ExtResource("1_bgwm6")
region = Rect2(192, 64, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ua3gh"]
atlas = ExtResource("1_bgwm6")
region = Rect2(64, 96, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qkogl"]
atlas = ExtResource("1_bgwm6")
region = Rect2(128, 96, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t5buh"]
atlas = ExtResource("1_bgwm6")
region = Rect2(192, 96, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f2eww"]
atlas = ExtResource("1_bgwm6")
region = Rect2(64, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fsm8g"]
atlas = ExtResource("1_bgwm6")
region = Rect2(128, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_px3dd"]
atlas = ExtResource("1_bgwm6")
region = Rect2(192, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eky1l"]
atlas = ExtResource("1_bgwm6")
region = Rect2(256, 0, 64, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ckag1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mjivk")
}],
"loop": true,
"name": &"gun_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nv2f0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t0l2v")
}],
"loop": false,
"name": &"gun_shoot",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bleg1")
}],
"loop": true,
"name": &"knife_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s14ao")
}],
"loop": true,
"name": &"machine_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ogjj7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gu8od")
}],
"loop": false,
"name": &"machine_shoot",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ua3gh")
}],
"loop": true,
"name": &"mini_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qkogl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t5buh")
}],
"loop": false,
"name": &"mini_shoot",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f2eww")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fsm8g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_px3dd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eky1l")
}],
"loop": false,
"name": &"stab",
"speed": 16.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_4f2lg"]
atlas = ExtResource("4_8nvxm")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l5sfb"]
atlas = ExtResource("4_8nvxm")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_058oh"]
atlas = ExtResource("4_8nvxm")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pvrms"]
atlas = ExtResource("4_8nvxm")
region = Rect2(576, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3n6vq"]
atlas = ExtResource("4_8nvxm")
region = Rect2(608, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3kkif"]
atlas = ExtResource("4_8nvxm")
region = Rect2(640, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_is4k4"]
atlas = ExtResource("4_8nvxm")
region = Rect2(480, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_56n21"]
atlas = ExtResource("4_8nvxm")
region = Rect2(512, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tu1rj"]
atlas = ExtResource("4_8nvxm")
region = Rect2(544, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s3mc4"]
atlas = ExtResource("4_8nvxm")
region = Rect2(384, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1wtlq"]
atlas = ExtResource("4_8nvxm")
region = Rect2(416, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_udbwx"]
atlas = ExtResource("4_8nvxm")
region = Rect2(448, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3bicb"]
atlas = ExtResource("4_8nvxm")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yq1rg"]
atlas = ExtResource("4_8nvxm")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pq8yk"]
atlas = ExtResource("4_8nvxm")
region = Rect2(352, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_451d1"]
atlas = ExtResource("4_8nvxm")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2oenw"]
atlas = ExtResource("4_8nvxm")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eseoh"]
atlas = ExtResource("4_8nvxm")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1djve"]
atlas = ExtResource("4_8nvxm")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_agsql"]
atlas = ExtResource("4_8nvxm")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4nljq"]
atlas = ExtResource("4_8nvxm")
region = Rect2(160, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_57ibq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4f2lg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l5sfb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_058oh")
}],
"loop": true,
"name": &"100",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pvrms")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3n6vq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3kkif")
}],
"loop": true,
"name": &"15",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_is4k4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_56n21")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tu1rj")
}],
"loop": true,
"name": &"30",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s3mc4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1wtlq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_udbwx")
}],
"loop": true,
"name": &"45",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3bicb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yq1rg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pq8yk")
}],
"loop": true,
"name": &"60",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_451d1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2oenw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eseoh")
}],
"loop": true,
"name": &"75",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1djve")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_agsql")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4nljq")
}],
"loop": true,
"name": &"90",
"speed": 1.0
}]

[node name="ui" type="CanvasLayer"]
script = ExtResource("1_fisiw")

[node name="WeaponSprite2D" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(575, 440)
scale = Vector2(5, 5)
sprite_frames = SubResource("SpriteFrames_ckag1")
animation = &"stab"
autoplay = "gun_idle"

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -576.0
offset_top = -129.0
offset_right = 576.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0, 0, 0.643137, 1)

[node name="WeaponIcon" type="TextureRect" parent="."]
anchors_preset = -1
anchor_left = 0.778
anchor_top = 0.864
anchor_right = 0.944
anchor_bottom = 0.988
offset_left = 55.744
offset_top = -31.872
offset_right = 56.512
offset_bottom = -32.224
scale = Vector2(1, 1.4)
texture = ExtResource("3_6431s")

[node name="ScoreValue" type="Label" parent="."]
anchors_preset = -1
anchor_left = 0.778
anchor_top = 0.901
anchor_right = 0.889
anchor_bottom = 0.986
offset_left = -696.256
offset_top = 0.152039
offset_right = -696.128
offset_bottom = 0.0720215
label_settings = ExtResource("4_twnr3")
horizontal_alignment = 1

[node name="ScoreHeader" type="Label" parent="."]
anchors_preset = -1
anchor_left = 0.778
anchor_top = 0.802
anchor_right = 0.889
anchor_bottom = 0.889
offset_left = -696.256
offset_top = 0.304016
offset_right = -684.128
offset_bottom = 3.92798
text = "SCORE"
label_settings = ExtResource("4_twnr3")
horizontal_alignment = 1

[node name="AmmoValue" type="Label" parent="."]
anchors_preset = -1
anchor_left = 0.611
anchor_top = 0.901
anchor_right = 0.722
anchor_bottom = 0.986
offset_left = 112.128
offset_top = 0.152039
offset_right = 112.256
offset_bottom = 0.0720215
label_settings = ExtResource("4_twnr3")
horizontal_alignment = 1

[node name="AmmoHeader" type="Label" parent="."]
anchors_preset = -1
anchor_left = 0.611
anchor_top = 0.802
anchor_right = 0.722
anchor_bottom = 0.889
offset_left = 112.128
offset_top = 0.304016
offset_right = 124.256
offset_bottom = 3.92798
text = "AMMO
"
label_settings = ExtResource("4_twnr3")
horizontal_alignment = 1

[node name="HealthValue" type="Label" parent="."]
anchors_preset = -1
anchor_left = 0.444
anchor_top = 0.901
anchor_right = 0.556
anchor_bottom = 0.986
offset_left = 136.512
offset_top = 0.152039
offset_right = 135.488
offset_bottom = 2.07208
label_settings = ExtResource("4_twnr3")
horizontal_alignment = 1

[node name="HealthHeader" type="Label" parent="."]
anchors_preset = -1
anchor_left = 0.444
anchor_top = 0.802
anchor_right = 0.556
anchor_bottom = 0.889
offset_left = 136.512
offset_top = 0.304016
offset_right = 164.488
offset_bottom = 3.92798
text = "HEALTH
"
label_settings = ExtResource("4_twnr3")
horizontal_alignment = 1

[node name="LivesValue" type="Label" parent="."]
anchors_preset = -1
anchor_left = 0.167
anchor_top = 0.901
anchor_right = 0.278
anchor_bottom = 0.986
offset_left = 183.616
offset_top = 0.152039
offset_right = 183.744
offset_bottom = 2.07208
label_settings = ExtResource("4_twnr3")
horizontal_alignment = 1

[node name="LivesHeader" type="Label" parent="."]
anchors_preset = -1
anchor_left = 0.167
anchor_top = 0.802
anchor_right = 0.278
anchor_bottom = 0.887
offset_left = 183.616
offset_top = 0.304016
offset_right = 195.744
offset_bottom = 5.224
text = "LIVES"
label_settings = ExtResource("4_twnr3")
horizontal_alignment = 1

[node name="LevelValue" type="Label" parent="."]
anchors_preset = -1
anchor_top = 0.901
anchor_right = 0.111
anchor_bottom = 0.986
offset_left = 16.0
offset_top = 0.151978
offset_right = 16.128
offset_bottom = 2.07202
label_settings = ExtResource("4_twnr3")
horizontal_alignment = 1

[node name="LevelHeader" type="Label" parent="."]
anchors_preset = -1
anchor_top = 0.802
anchor_right = 0.111
anchor_bottom = 0.889
offset_left = 16.0
offset_top = 0.304016
offset_right = 58.128
offset_bottom = 0.927979
text = "FLOOR"
label_settings = ExtResource("4_twnr3")
horizontal_alignment = 1

[node name="face" type="AnimatedSprite2D" parent="."]
position = Vector2(584, 584)
scale = Vector2(4, 3.7)
sprite_frames = SubResource("SpriteFrames_57ibq")
animation = &"90"
autoplay = "100"

[node name="Hardcoded" type="Sprite2D" parent="."]
visible = false
position = Vector2(648, -112)
scale = Vector2(0.69403, 0.756131)
texture = ExtResource("6_w8pq3")

[node name="Borders" type="Node" parent="."]

[node name="Up" type="ColorRect" parent="Borders"]
anchors_preset = -1
anchor_left = 0.007
anchor_right = 0.993
anchor_bottom = 0.012
offset_left = -0.0640001
offset_right = 0.0639648
offset_bottom = 0.224
color = Color(0, 0.254902, 0.254902, 1)

[node name="Down" type="ColorRect" parent="Borders"]
anchors_preset = -1
anchor_left = 0.007
anchor_right = 0.993
anchor_bottom = 0.012
offset_left = -0.0640001
offset_top = 640.0
offset_right = 0.0639648
offset_bottom = 640.224
color = Color(0, 0.254902, 0.254902, 1)

[node name="Left" type="ColorRect" parent="Borders"]
anchors_preset = -1
anchor_right = 0.007
anchor_bottom = 1.0
offset_right = -0.0640001
color = Color(0, 0.254902, 0.254902, 1)

[node name="Right" type="ColorRect" parent="Borders"]
anchors_preset = -1
anchor_left = 0.993
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0639648
color = Color(0, 0.254902, 0.254902, 1)
